bk_ida/sjengida/g1/calc_attackers
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/calc_attackers/src/attacks.c:509:17: error: use of undeclared identifier 'rook_o_8'
v15 = ( void **)rook_o_8; 
                ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/calc_attackers/src/attacks.c:537:13: error: use of undeclared identifier 'jpt_40190F'
if ( v15 == jpt_40190F ) 
            ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/calc_attackers/src/attacks.c:545:7: error: use of undeclared identifier 'bishop_o_7'
v23 = bishop_o_7[v16]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/calc_attackers/src/attacks.c:553:7: error: use of undeclared identifier 'knight_o_6'
v22 = knight_o_6; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/calc_attackers/src/attacks.c:560:16: error: use of undeclared identifier 'bishop_o_7'
while ( v22 != bishop_o_7 ); 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/calc_attackers/src/attacks.c:591:16: error: use of undeclared identifier 'rook_o_8'
v3 = ( void **)rook_o_8; 
               ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/calc_attackers/src/attacks.c:619:12: error: use of undeclared identifier 'jpt_40190F'
if ( v3 == jpt_40190F ) 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/calc_attackers/src/attacks.c:627:7: error: use of undeclared identifier 'bishop_o_7'
v11 = bishop_o_7[v4]; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/calc_attackers/src/attacks.c:663:7: error: use of undeclared identifier 'knight_o_6'
v10 = knight_o_6; 
      ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/calc_attackers/src/attacks.c:670:16: error: use of undeclared identifier 'bishop_o_7'
while ( v10 != bishop_o_7 ); 
               ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/calc_attackers/src/obj/attacks.o] Error 1
